# odd-airflow-adapter

./: .dockerignore  .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yml  pyproject.toml  setup.py
docker/: .env  Dockerfile  docker-compose.yml  requirements.txt
docker/dags/: mysql_dag.py  postgres_dag.py
odd_airflow/: __init__.py  dag.py  metadata.py  settings.py  utils.py
odd_airflow/extractors/: __init__.py  base.py  biquery.py  extractors.py  hive.py  mysql.py  postgres.py  redshift_s3.py  snowflake.py  sql_mixin.py
odd_airflow/oddrn/: airflow.py  postgres.py
