[tool.poetry]
name = "odd-airflow"
version = "0.1.3"
description = "Open Data Discovery adapter to Airflow"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opendatadiscovery/odd-airflow-adapter"
repository = "https://github.com/opendatadiscovery/odd-airflow-adapter"
keywords = ["odd-airflow"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"
oddrn-generator = "^0.1.13"
odd-models = "^1.0.4"
attrs = "^20.3"
requests = "^2.24.0"
sqlparse = "0.4.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
